--- a/woorischool/Cells/VIews/RegistedClassTableViewCell.xib
+++ b/woorischool/Cells/VIews/RegistedClassTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -287,6 +287,7 @@
                 <outlet property="countLabel" destination="wug-gc-dui" id="cP4-ha-jBj"/>
                 <outlet property="nameLabel" destination="gjP-ll-48o" id="OGt-Pl-w9t"/>
                 <outlet property="priceLabel" destination="V45-zG-WSn" id="gzc-ls-X3P"/>
+                <outlet property="readyTitleLabel" destination="ndH-TE-3Vi" id="ek5-Zb-fjA"/>
                 <outlet property="teacherNameLabel" destination="hRk-V4-Rev" id="SP6-Gx-xSg"/>
                 <outlet property="weekdaysLabel" destination="7yX-nO-4ff" id="IwD-9A-1XW"/>
             </connections>
