--- a/woorischool/CustomView/CustomInputView.xib
+++ b/woorischool/CustomView/CustomInputView.xib
@@ -22,7 +22,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OHk-op-xYY">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
+                    <rect key="frame" x="0.0" y="312" width="375" height="1"/>
                     <color key="backgroundColor" name="veryLightPink"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="uwb-Bx-IBp"/>
@@ -41,13 +41,13 @@
                     </connections>
                 </button>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AOd-Lf-4A8" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
-                    <rect key="frame" x="54" y="9" width="309" height="354"/>
+                    <rect key="frame" x="54" y="321" width="309" height="42"/>
                     <subviews>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="always" bouncesZoom="NO" keyboardDismissMode="interactive" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6en-mT-Ujw">
-                            <rect key="frame" x="18" y="6" width="216" height="342"/>
+                            <rect key="frame" x="18" y="6" width="216" height="30"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstAttribute="height" priority="1" constant="30" id="SAw-DA-uph"/>
+                                <constraint firstAttribute="height" constant="30" id="SAw-DA-uph"/>
                             </constraints>
                             <color key="textColor" name="greyishBrown"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -57,7 +57,7 @@
                             </connections>
                         </textView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DCb-bs-l9w">
-                            <rect key="frame" x="242" y="323" width="25" height="25"/>
+                            <rect key="frame" x="242" y="11" width="25" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="25" id="3vn-5S-uLj"/>
                                 <constraint firstAttribute="height" constant="25" id="tMH-jI-w7x"/>
@@ -68,7 +68,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5J2-zt-Nxk">
-                            <rect key="frame" x="278" y="323" width="25" height="25"/>
+                            <rect key="frame" x="278" y="11" width="25" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="25" id="0fO-r2-yUW"/>
                                 <constraint firstAttribute="width" constant="25" id="lxZ-3y-9kj"/>
@@ -100,7 +100,7 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="OHk-op-xYY" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="4eP-WN-mRk"/>
-                <constraint firstItem="OHk-op-xYY" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="6da-Wd-85L"/>
+                <constraint firstItem="OHk-op-xYY" firstAttribute="top" relation="greaterThanOrEqual" secondItem="vUN-kp-3ea" secondAttribute="top" id="6da-Wd-85L"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="yzW-oh-8oX" secondAttribute="bottom" constant="14" id="FLh-HF-72Z"/>
                 <constraint firstItem="AOd-Lf-4A8" firstAttribute="top" secondItem="OHk-op-xYY" secondAttribute="bottom" constant="8" id="H9i-GO-Utu"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="AOd-Lf-4A8" secondAttribute="trailing" constant="12" id="OFI-Tn-5ne"/>
