--- a/woorischool/Views/Global/ModalViews/BoardDetailViewController.xib
+++ b/woorischool/Views/Global/ModalViews/BoardDetailViewController.xib
@@ -23,6 +23,7 @@
                 <outlet property="imageContainerView" destination="pS5-Ld-FyC" id="Z9m-6q-Dzb"/>
                 <outlet property="imageCountLabel" destination="R6w-oM-Tqv" id="V3b-So-wTQ"/>
                 <outlet property="likeCountLabel" destination="2mk-wm-Vyr" id="Srn-8W-IAn"/>
+                <outlet property="likeImageView" destination="IOW-R3-f3G" id="64b-EO-yAK"/>
                 <outlet property="nameLabel" destination="Byl-HT-8nQ" id="oED-Ty-kvW"/>
                 <outlet property="profileImageView" destination="g9f-Du-3v0" id="Seu-Wu-6UZ"/>
                 <outlet property="replyCountLabel" destination="0ZM-hB-qXe" id="43B-aw-NWS"/>
@@ -82,7 +83,7 @@
                                             <color key="textColor" name="brownGrey"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="01J-G3-rq5">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="01J-G3-rq5">
                                             <rect key="frame" x="20" y="58" width="374" height="16.5"/>
                                             <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="14"/>
                                             <nil key="textColor"/>
@@ -196,16 +197,26 @@
                                                 <constraint firstAttribute="width" constant="17" id="Rlc-CB-p9F"/>
                                             </constraints>
                                         </imageView>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bud-Du-PAc">
+                                            <rect key="frame" x="350.5" y="0.0" width="63.5" height="37"/>
+                                            <connections>
+                                                <action selector="likeCheckEvent" destination="-1" eventType="touchUpInside" id="pRD-Gh-q62"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="IOW-R3-f3G" secondAttribute="trailing" constant="26" id="25V-OY-Sbb"/>
+                                        <constraint firstItem="bud-Du-PAc" firstAttribute="top" secondItem="Q51-5K-Zd7" secondAttribute="top" id="7qr-XS-bQ5"/>
                                         <constraint firstItem="IOW-R3-f3G" firstAttribute="centerY" secondItem="Q51-5K-Zd7" secondAttribute="centerY" id="Baa-0k-EW8"/>
                                         <constraint firstItem="0ZM-hB-qXe" firstAttribute="centerY" secondItem="Q51-5K-Zd7" secondAttribute="centerY" id="Dy2-Ae-MxD"/>
+                                        <constraint firstAttribute="trailing" secondItem="bud-Du-PAc" secondAttribute="trailing" id="Fgo-8x-OJH"/>
                                         <constraint firstAttribute="height" constant="37" id="KAr-oe-in3"/>
                                         <constraint firstItem="IOW-R3-f3G" firstAttribute="leading" secondItem="2mk-wm-Vyr" secondAttribute="trailing" constant="5" id="L7q-m7-3ve"/>
                                         <constraint firstItem="mFl-db-seO" firstAttribute="leading" secondItem="Q51-5K-Zd7" secondAttribute="leading" constant="28" id="Lqc-cD-rn5"/>
                                         <constraint firstItem="mFl-db-seO" firstAttribute="centerY" secondItem="Q51-5K-Zd7" secondAttribute="centerY" id="Qji-18-gy7"/>
+                                        <constraint firstItem="bud-Du-PAc" firstAttribute="leading" secondItem="2mk-wm-Vyr" secondAttribute="leading" id="ZJ2-AM-VQx"/>
+                                        <constraint firstAttribute="bottom" secondItem="bud-Du-PAc" secondAttribute="bottom" id="bk9-jd-t1u"/>
                                         <constraint firstItem="2mk-wm-Vyr" firstAttribute="centerY" secondItem="Q51-5K-Zd7" secondAttribute="centerY" id="f8x-3W-VVR"/>
                                         <constraint firstItem="0ZM-hB-qXe" firstAttribute="leading" secondItem="mFl-db-seO" secondAttribute="trailing" constant="8" id="zW0-NA-Gnw"/>
                                     </constraints>
