--- a/woorischool/Views/Parents/ModalViews/ParentsEnrolmentClassViewController.xib
+++ b/woorischool/Views/Parents/ModalViews/ParentsEnrolmentClassViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -20,6 +20,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ParentsEnrolmentClassViewController" customModule="우리스쿨" customModuleProvider="target">
             <connections>
                 <outlet property="dueDateLabel" destination="XUw-FA-mw9" id="vIm-kF-0yt"/>
+                <outlet property="priceLabel" destination="Pem-31-cFo" id="7en-zF-aLe"/>
                 <outlet property="quaterNameLabel" destination="Vql-cn-uJz" id="9BH-Lm-R0O"/>
                 <outlet property="registPeriodLabel" destination="K4Q-qX-Ji0" id="CaK-Yu-GRO"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
