--- a/woorischool/Views/Parents/ModalViews/ParentsMainViewController.xib
+++ b/woorischool/Views/Parents/ModalViews/ParentsMainViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -52,6 +52,7 @@
                                 </view>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="homeMainIcon" translatesAutoresizingMaskIntoConstraints="NO" id="DAG-fH-tt9">
                                     <rect key="frame" x="15" y="10" width="20" height="20"/>
+                                    <color key="tintColor" name="greenishTeal"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="20" id="3wP-Aw-3td"/>
                                         <constraint firstAttribute="height" constant="20" id="WDE-x8-pkp"/>
@@ -60,7 +61,7 @@
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="홈" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4B2-Ti-Ng8">
                                     <rect key="frame" x="20.5" y="30" width="9" height="20"/>
                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="10"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" name="greenishTeal"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
@@ -93,6 +94,7 @@
                                 </view>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="classMainIcon" translatesAutoresizingMaskIntoConstraints="NO" id="kkL-2R-rTK">
                                     <rect key="frame" x="15" y="10" width="20" height="20"/>
+                                    <color key="tintColor" name="brownGrey"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="20" id="F50-BS-psg"/>
                                         <constraint firstAttribute="height" constant="20" id="ymb-oY-ZVf"/>
@@ -101,7 +103,7 @@
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="방과후수업" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Umu-gU-oEQ">
                                     <rect key="frame" x="3.5" y="30" width="43.5" height="20"/>
                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="10"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" name="brownGrey"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
@@ -134,6 +136,7 @@
                                 </view>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="boardMainIcon" translatesAutoresizingMaskIntoConstraints="NO" id="0s7-bh-VKh">
                                     <rect key="frame" x="15" y="10" width="20" height="20"/>
+                                    <color key="tintColor" name="brownGrey"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="20" id="I2I-V0-TZ5"/>
                                         <constraint firstAttribute="height" constant="20" id="LEl-Vi-1Is"/>
@@ -142,7 +145,7 @@
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="게시판" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qZz-dJ-sw0">
                                     <rect key="frame" x="12" y="30" width="26" height="20"/>
                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="10"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" name="brownGrey"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
@@ -175,6 +178,7 @@
                                 </view>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="talkMainIcon" translatesAutoresizingMaskIntoConstraints="NO" id="rmj-Pb-Qx9">
                                     <rect key="frame" x="15" y="10" width="20" height="20"/>
+                                    <color key="tintColor" name="brownGrey"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="20" id="GmW-gZ-fHG"/>
                                         <constraint firstAttribute="height" constant="20" id="KH2-DL-06C"/>
@@ -183,7 +187,7 @@
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="소통방" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uUZ-4k-JbN">
                                     <rect key="frame" x="12" y="30" width="26" height="20"/>
                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="10"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" name="brownGrey"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
@@ -216,6 +220,8 @@
                                 </view>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="myMainIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Zwy-Q0-e1r">
                                     <rect key="frame" x="15" y="10" width="20" height="20"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="tintColor" name="brownGrey"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="20" id="Dd1-uf-yfF"/>
                                         <constraint firstAttribute="width" constant="20" id="JO5-ZB-3Mj"/>
@@ -224,7 +230,7 @@
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gg4-wN-Hy5">
                                     <rect key="frame" x="17.5" y="30" width="15.5" height="20"/>
                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="10"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" name="brownGrey"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
@@ -299,6 +305,9 @@
         <image name="homeMainIcon" width="22" height="21"/>
         <image name="myMainIcon" width="23" height="20"/>
         <image name="talkMainIcon" width="23" height="18"/>
+        <namedColor name="brownGrey">
+            <color red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="greenishTeal">
             <color red="0.17254901960784313" green="0.77647058823529413" blue="0.5607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
